--- a/Learn Java/2. Arithmmetic Operations.md
+++ b/Learn Java/2. Arithmmetic Operations.md
@@ -1,6 +1,6 @@
 In real life, we often perform arithmetic operations. They help us to determine the change from a purchase, calculate the area of a room, count the number of people in a queue, and so on. The same operations are used in programs.
 
-##### Binary arithmetic operators
+##### #Binary arithmetic operators
 
 The Java programming language provides operators to perform arithmetic operations:
 
@@ -84,7 +84,7 @@ System.out.println(-(100 + 4)); // prints -104
 
 They both have a higher level of precedence than the **multiplication** and **division** operators.
 
-##### The precedence order
+##### The #precedence-order
 
 There is a [precedence order](https://introcs.cs.princeton.edu/java/11precedence/) of all arithmetic operators, including parentheses. The list below is sorted from the highest to the lowest precedence level.
 
@@ -96,4 +96,4 @@ There is a [precedence order](https://introcs.cs.princeton.edu/java/11precedenc
     
 - addition, subtraction.
 
-[[Printing Data]]
+[[3. Printing Data]]
