--- a/Learn Java/3. Printing Data.md
+++ b/Learn Java/3. Printing Data.md
@@ -1,6 +1,6 @@
 When you write programs, you often need to print calculation results, text, or any other type of data. Also, throughout this educational platform, you will write a lot of programs that print data on the screen. Let's learn how to do that using a standard approach in Java.
 
-##### Displaying text using println() and print()
+##### Displaying text using #println() and print()
 
 **Standard output** is a receiver to which a program can send information as text. It is supported by all common operating systems. Java provides a special `System.out` object to work with the standard output. We will often use it to print data.
 
