--- a/Learn Java/Notes/57. Objects.md
+++ b/Learn Java/Notes/57. Objects.md
@@ -87,3 +87,5 @@ Attempting to access a reference that points to **null** will result in an **
 By now, not only have we already worked with some classes from the standard library but also learned how Java allows us to create our own classes. In this topic, we've discussed that the nature of custom classes' objects and standard library ones are based on the same principles.
 
 Keep in mind, that classes defined by programmers are **reference types**. When objects are created by the **new** operator it returns a reference in memory where the created objects are located. With this reference, we can get access to fields and change them. Several variables can refer to the same object through a reference. It is also possible to create two independent objects with the same field's content. It's important to understand that references to such objects are different. However, not all objects allow changing their state after creation. Such a feature is called **immutability**.
+
+[[58. Random]]
