Información Actualizada el 11-09-2023 21:49

--- a/Learn Java/Notes/65. Custom Exceptions.md
+++ b/Learn Java/Notes/65. Custom Exceptions.md
@@ -63,3 +63,5 @@ Is creating a custom exception always a good idea? Although the custom exception
 ##### Conclusion
 
 Custom exceptions are a great tool for handling inconsistencies in your program. In this topic, we learned how to create and throw them, along with some best practices to follow. However, we highly recommend creating a custom exception only when it is justified. Standard Java exceptions are often a safer and no less efficient choice.
+
+[[66. Files]]
