Información Actualizada el 12-09-2023 20:48

--- a/67. Reading Files.md
+++ b/67. Reading Files.md
@@ -124,3 +124,5 @@ public class HelloWorld {
 ##### Conclusion
 
 The method using `java.util.Scanner` is convenient for reading various data types from a file. When reading using `Scanner`, you need to handle the `FileNotFoundException` exception or declare it. It is recommended to close the Scanner after use with **try-with-resources**. The method using the `**Files**` and `Paths` classes provides the ability to read the entire text from a file as a single string. Reading the entire text from a file as a single string is suitable for small files.These methods provide convenient tools for working with files in Java.
+
+[[68. Static Members]]
