Información Actualizada el 12-09-2023 21:17

--- a/Learn Java/Notes/72. Debugging Techniques.md
+++ b/Learn Java/Notes/72. Debugging Techniques.md
@@ -140,4 +140,5 @@ Modern debuggers provide a vast variety of tools that can be used to diagnose th
 ##### Conclusion
 
 In this topic, you have learned about different debugging techniques you can use to ensure that your code is error-free. The most basic method is inserting print statements to keep track of the values and the execution order of your program. Also, you may add assertions using the `assert` keyword to make potential hidden errors visible at an early stage of development. Such assertions may be enabled and disabled by adding or removing the `-ea` JVM flag. Finally, you may attach a debugger to the program to examine its internal state at runtime. These techniques will help you to detect and fix bugs in your code efficiently.
-ø
+
+[[73. Fortmatted Output]]
