Información Actualizada el 12-09-2023 21:53

--- a/81. Numeric literals.md
+++ b/81. Numeric literals.md
@@ -168,3 +168,5 @@ These are actually unary operators that perform an operation with a single argum
 ##### Conclusion
 
 All numeric values in Java are represented by numeric literals. There are integer and floating-point literals, as well as decimal, hexadecimal, octal and binary representations. You can tell the type by the look of the literal: if it starts with `0b` it is binary, a `0x` prefix indicates hexadecimal, a leading zero denotes an octal literal. Floating-point literals have a decimal point and an optional exponential part marked by `e` or `p`. Postfixes `L`, `F` and `D` are also used to distinguish between long and integer literals and between float and double ones. Since the `char` type is also an integer, some character literals may be used to indicate numeric values.
+
+[[82. Garbage Collector]]
