Información Actualizada el 13-09-2023 21:49

--- a/Learn Java/Notes/79. Array Exceptions.md
+++ b/Learn Java/Notes/79. Array Exceptions.md
@@ -1,4 +1,4 @@
-No wonder that different types of exceptions may occur when your program processes an array. To avoid them, you should be aware of the situations where you are at risk of having one and stick to a set of commonly used practices. Now let's learn what exactly we are dealing with here.
+*No* wonder that different types of exceptions may occur when your program processes an array. To avoid them, you should be aware of the situations where you are at risk of having one and stick to a set of commonly used practices. Now let's learn what exactly we are dealing with here.
 
 ##### NullPointerException
 
